# repository/entity/drone_load.go
@@ -1,0 +1,7 @@
+package entity
+
+type DroneLoad struct {
+	AbstractModel
+	DroneSerialNumber string `gorm:"not null" json:"drone_serial_number"`
+	MedicationCode   string `gorm:"not null" json:"medication_code"`
+}
