# usecase/entity/drone_load.go
@@ -1,0 +1,8 @@
+package entity
+
+import "drone-task/repository/entity"
+
+type CreatedDroneLoad struct {
+	CreatedDroneLoad entity.DroneLoad `json:"created_drone_load,omitempty"`
+	Errors           []string         `json:"errors,omitempty"`
+}
